--- a/museum-management-ui/package.json
+++ b/museum-management-ui/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "postbuild": "npm run deploy",
+    "predeploy": "rimraf ../museum-management-backend/src/main/resources/static && mkdirp ../museum-management-backend/src/main/resources/static",
+    "deploy": "copyfiles -f dist/** ../museum-management-backend/src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
