--- a/museum-management-backend/src/main/resources/application.properties
+++ b/museum-management-backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost/sample?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.platform=mysql
 
+spring.resources.static-locations[0]=file:src/main/resources/static/
+spring.resources.static-locations[1]=classpath:/static/
